Add swagger (#9)
* v1 swagger 버그 수정

* axios 에러시 internal 서버 에러 발생한 것 수정

* Add Swagger & Modify Api Interface
