# src/routes/auth/index.js
@@ -3,21 +3,20 @@ import * as SignInController from './SignInController';
 import {kakaoLoginMiddlewrae, appleLoginMiddleware} from '@src/middleware/social-login-middleware';
 import {validateBodyMiddleware} from '@src/middleware/request-validate-middleware';
 import {
-    AppleSignInRequest,
-    KakoSignInRequest,
-} from '@src/model/api/SignInRequest';
+    SocialSignInRequest,
+} from '@src/routes/auth/dto/SignInRequest';
 
 const router = new Router();
 
 router.post(
-    '/signin/kakao',
-    validateBodyMiddleware(KakoSignInRequest),
+    '/kakao/signin',
+    validateBodyMiddleware(SocialSignInRequest),
     kakaoLoginMiddlewrae,
     SignInController.signInBySocialLogin);
 
 router.post(
-    '/signin/apple',
-    validateBodyMiddleware(AppleSignInRequest),
+    '/apple/signin',
+    validateBodyMiddleware(SocialSignInRequest),
     appleLoginMiddleware,
     SignInController.signInBySocialLogin);
 
